package DesiginPatternHomework.Composite;

public interface FileSystemItem {
    void print(String prefix);
    Long getSize();
}
